// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alias-key.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[&123 foo, *123 : 456]

=====================================output=====================================
[&123 foo, *123 : 456]

================================================================================
`;

exports[`alias-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[&123 foo, *123 : 456]

=====================================output=====================================
[&123 foo, *123 : 456]

================================================================================
`;

exports[`alias-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[&123 foo, *123 : 456]

=====================================output=====================================
[&123 foo, *123 : 456]

================================================================================
`;

exports[`array-key.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
]

================================================================================
`;

exports[`array-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-key-array-value.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-key-array-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
]

================================================================================
`;

exports[`array-key-array-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-plain.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
]

================================================================================
`;

exports[`array-plain.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-plain.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
]

================================================================================
`;

exports[`array-value.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
]

================================================================================
`;

exports[`array-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`comment-between.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[
? 123
# comment
: 456
]

=====================================output=====================================
[
  ? 123
  # comment
  : 456,
]

================================================================================
`;

exports[`comment-between.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[
? 123
# comment
: 456
]

=====================================output=====================================
[
    ? 123
    # comment
    : 456,
]

================================================================================
`;

exports[`comment-between.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
? 123
# comment
: 456
]

=====================================output=====================================
[
  ? 123
  # comment
  : 456,
]

================================================================================
`;

exports[`comment-trailing.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[123, # comment
]

=====================================output=====================================
[
  123, # comment
]

================================================================================
`;

exports[`comment-trailing.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[123, # comment
]

=====================================output=====================================
[
    123, # comment
]

================================================================================
`;

exports[`comment-trailing.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[123, # comment
]

=====================================output=====================================
[
  123, # comment
]

================================================================================
`;

exports[`empty.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[]

=====================================output=====================================
[]

================================================================================
`;

exports[`empty.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[]

=====================================output=====================================
[]

================================================================================
`;

exports[`empty.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[]

=====================================output=====================================
[]

================================================================================
`;

exports[`empty-item-colon.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[ : ]

=====================================output=====================================
[: ]

================================================================================
`;

exports[`empty-item-colon.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[ : ]

=====================================output=====================================
[: ]

================================================================================
`;

exports[`empty-item-colon.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[ : ]

=====================================output=====================================
[: ]

================================================================================
`;

exports[`empty-line.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb ]

=====================================output=====================================
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
]

================================================================================
`;

exports[`empty-line.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb ]

=====================================output=====================================
[
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
]

================================================================================
`;

exports[`empty-line.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb ]

=====================================output=====================================
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
]

================================================================================
`;

exports[`empty-line-collapse.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[ aaa, 

bbb ]

=====================================output=====================================
[aaa, bbb]

================================================================================
`;

exports[`empty-line-collapse.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[ aaa, 

bbb ]

=====================================output=====================================
[aaa, bbb]

================================================================================
`;

exports[`empty-line-collapse.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[ aaa, 

bbb ]

=====================================output=====================================
[aaa, bbb]

================================================================================
`;

exports[`long-key.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
    ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key-long-value.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key-long-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key-long-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-plain.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-plain.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-plain.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-value.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
    : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`middle-comment.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
!!set # comment
[]

=====================================output=====================================
!!set # comment
[]

================================================================================
`;

exports[`middle-comment.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!set # comment
[]

=====================================output=====================================
!!set # comment
[]

================================================================================
`;

exports[`middle-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set # comment
[]

=====================================output=====================================
!!set # comment
[]

================================================================================
`;

exports[`middle-comments.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
!!set # comment 1
# comment 2
[]

=====================================output=====================================
!!set
# comment 1
# comment 2
[]

================================================================================
`;

exports[`middle-comments.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!set # comment 1
# comment 2
[]

=====================================output=====================================
!!set
# comment 1
# comment 2
[]

================================================================================
`;

exports[`middle-comments.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set # comment 1
# comment 2
[]

=====================================output=====================================
!!set
# comment 1
# comment 2
[]

================================================================================
`;

exports[`next-empty-line.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
]

=====================================output=====================================
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

  c: 123,
]

================================================================================
`;

exports[`next-empty-line.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
]

=====================================output=====================================
[
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

    c: 123,
]

================================================================================
`;

exports[`next-empty-line.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
]

=====================================output=====================================
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

  c: 123,
]

================================================================================
`;

exports[`props.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
!!set &anchor [1]

=====================================output=====================================
!!set &anchor [1]

================================================================================
`;

exports[`props.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!set &anchor [1]

=====================================output=====================================
!!set &anchor [1]

================================================================================
`;

exports[`props.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set &anchor [1]

=====================================output=====================================
!!set &anchor [1]

================================================================================
`;

exports[`props-in-map.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
a: !!set &anchor [1]

=====================================output=====================================
a: !!set &anchor [1]

================================================================================
`;

exports[`props-in-map.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
a: !!set &anchor [1]

=====================================output=====================================
a: !!set &anchor [1]

================================================================================
`;

exports[`props-in-map.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!set &anchor [1]

=====================================output=====================================
a: !!set &anchor [1]

================================================================================
`;

exports[`short-key.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[? 1,? 2,? 3]

=====================================output=====================================
[? 1, ? 2, ? 3]

================================================================================
`;

exports[`short-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[? 1,? 2,? 3]

=====================================output=====================================
[? 1, ? 2, ? 3]

================================================================================
`;

exports[`short-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[? 1,? 2,? 3]

=====================================output=====================================
[? 1, ? 2, ? 3]

================================================================================
`;

exports[`short-key-short-value.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[1: a,2: b,3: c]

=====================================output=====================================
[1: a, 2: b, 3: c]

================================================================================
`;

exports[`short-key-short-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[1: a,2: b,3: c]

=====================================output=====================================
[1: a, 2: b, 3: c]

================================================================================
`;

exports[`short-key-short-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[1: a,2: b,3: c]

=====================================output=====================================
[1: a, 2: b, 3: c]

================================================================================
`;

exports[`short-plain.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[1,2,3]

=====================================output=====================================
[1, 2, 3]

================================================================================
`;

exports[`short-plain.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[1,2,3]

=====================================output=====================================
[1, 2, 3]

================================================================================
`;

exports[`short-plain.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[1,2,3]

=====================================output=====================================
[1, 2, 3]

================================================================================
`;

exports[`short-value.yml - {"graphqlCurlySpacing":false,"exportCurlySpacing":false,"importCurlySpacing":false,"objectCurlySpacing":false,"typeCurlySpacing":false,"yamlBracketSpacing":false} format 1`] = `
====================================options=====================================
exportCurlySpacing: false
graphqlCurlySpacing: false
importCurlySpacing: false
objectCurlySpacing: false
parsers: ["yaml"]
printWidth: 80
typeCurlySpacing: false
yamlBracketSpacing: false
                                                                                | printWidth
=====================================input======================================
[: 1,: 2,: 3]

=====================================output=====================================
[: 1, : 2, : 3]

================================================================================
`;

exports[`short-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[: 1,: 2,: 3]

=====================================output=====================================
[: 1, : 2, : 3]

================================================================================
`;

exports[`short-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[: 1,: 2,: 3]

=====================================output=====================================
[: 1, : 2, : 3]

================================================================================
`;
